--- a/templates/index.html
+++ b/templates/index.html
@@ -5,149 +5,154 @@
     <meta name="google-signin-client_id"
           content="421574370091-aml7mds2j5ovgg2q0lbjfdbuttm5k4b7.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    {% for inf in info %}
-        <meta charset="UTF-8">
-        <link rel=stylesheet type=text/css href="/static/style/first-page-style.css">
-        <title>{{ inf.title }}</title>
-        </head>
-        <body>
-
-        <div id="alx-gbtn">
-            <div class="alx-gbtn">
-                <h2>Zaloguj sie przez Google!</h2>
-                <div class="g-signin2" align="center" data-width="300" data-height="50" data-onsuccess="onSignIn"
-                     data-theme="dark"></div>
-                <div>
-                    <button class="alx-btn" onclick="loginData()">Login Test</button>
-                    <button class="alx-btn" onclick="closeLoginForm()">Zamknij</button>
-                </div>
-            </div>
+    <meta charset="UTF-8">
+    <link rel=stylesheet type=text/css href="/static/style/first-page-style.css">
+    <title>{{ info[0] }}</title>
+</head>
+<body>
+<div id="alx-gbtn">
+    <div class="alx-gbtn">
+        <h2>Zaloguj sie przez Google!</h2>
+        <div class="g-signin2" align="center" data-width="300" data-height="50" data-onsuccess="onSignIn"
+             data-theme="dark"></div>
+        <div>
+            <button class="alx-btn" onclick="loginData()">Login Test</button>
+            <button class="alx-btn" onclick="closeLoginForm()">Zamknij</button>
         </div>
-        <div class="alx-avatar-FP">
-            <img src="/static/pic/raccoon.gif" id="avatar-FP">
+    </div>
+</div>
+<div class="alx-avatar-FP">
+    <img src="/static/pic/raccoon.gif" id="avatar-FP">
+</div>
+<div class="alx-cont">
+    <div class="alx-flex">
+        <div class="alx-flex-box">
+            <img src="/static/pic/logo.png">
+            <h1>Trashpanda</h1>
         </div>
-        <div class="alx-cont">
-            <div class="alx-flex">
-                <div class="alx-flex-box">
-                    <img src="/static/pic/logo.png">
-                    <h1>Trashpanda</h1>
-                </div>
-                <div class="alx-flex-box">
-                    <form>
-                        <input type="text" class="search-in" placeholder="Wpisz czego szukas...">
-                        <button type="submit" class="search-btn">Szukaj</button>
-                    </form>
-                </div>
-                <div class="alx-flex-box" id="func-btn">
-                    <button class="alx-btn" onclick="openLoginForm()"><span id="isSignIn"></span></button>
-                    <button class="alx-btn">Info</button>
-                </div>
-            </div>
+        <div class="alx-flex-box">
+            <form>
+                <input type="text" class="search-in" placeholder="Wpisz czego szukas...">
+                <button type="submit" class="search-btn">Szukaj</button>
+            </form>
         </div>
-    {% endfor %}
+        <div class="alx-flex-box" id="func-btn">
+            <button class="alx-btn" onclick="openLoginForm()"><span id="isSignIn"></span></button>
+            <button class="alx-btn">Info</button>
+        </div>
+    </div>
+</div>
 
-    <script>
-        {#-------------------------------------------------
-        isSignIn odpowiada za to, czy przycisk logowania
-        przekieruje do logowania google (jeśli false),
-        czy na chmurę (jeśli true)
-        -------------------------------------------------#}
-        var isSignIn = false;
-        var autoID = 23487623874623764;
-        var autoPic = "/static/pic/testpic.jpg";
-        var userID;
-        var userPic;
+<script>
+    {#-------------------------------------------------
+    isSignIn odpowiada za to, czy przycisk logowania
+    przekieruje do logowania google (jeśli false),
+    czy na chmurę (jeśli true)
+    -------------------------------------------------#}
+    var isSignIn = false;
+    {#var autoID = 23487623874623764;#}
+    {#var autoPic = "/static/pic/testpic.jpg";#}
+    var userPic;
 
-        {#-------------------------------------------------
-        Pobranie ciasteczek i sprawdzenie czy istnie userID
-        -------------------------------------------------#}
-        var cookies = document.cookie.split(";");
-        var cookbook = [];
-        for (var i = 0; i < cookies.length; i++) {
-            let tmp = cookies[i].split("=");
-            cookbook.push(tmp[1]);
+    var autoID = {{ data[0] }};
+    var autoPic = "{{ data[1] }}";
+
+    {#-------------------------------------------------
+    Pobranie ciasteczek i sprawdzenie czy istnie userID
+    -------------------------------------------------#}
+
+    {#    var userID = getCookie("userID");#}
+    {#    if(userID == ""){alert("Brak userID");}else{alert(userID);}#}
+
+    function getCookie(name) {
+        var cookies = document.cookie;
+        var tmp = cookies.split(";");
+        for (var i = 0; i < tmp.length; i++) {
+            var cookbook = tmp[i].split("=");
+            if (cookbook[0] == name) return cookbook[1];
         }
-        if (cookbook[0] == autoID) {
-            userID = autoID;
-            userPic = autoPic;
-            isSignIn = true;
+        return "";
+    }
+
+    var userID = getCookie("userID");
+    var userPic = getCookie(" userPic");
+    if (userID == autoID) isSignIn = true;
+
+    {#-------------------------------------------------
+    Edycja przycisku logowania i wylogowania
+    -------------------------------------------------#}
+    LoginButton();
+
+    function LoginButton() {
+        if (isSignIn) {
+            document.getElementById("isSignIn").innerText = "My Trashbox";
+            document.getElementById("avatar-FP").src = userPic;
+            let btn = document.createElement("BUTTON");
+            btn.className = "alx-btn";
+            btn.innerText = "Wyloguj";
+            btn.addEventListener("click", logout);
+            document.getElementById("func-btn").appendChild(btn);
+        } else {
+            document.getElementById("isSignIn").innerText = "Zaloguj się";
+            document.getElementById("avatar-FP").src = "/static/pic/raccoon.gif";
         }
+    }
 
-        {#-------------------------------------------------
-        Edycja przycisku logowania i wylogowania
-        -------------------------------------------------#}
-        LoginButton();
+    function logout() {
+        document.cookie = "userID=";
+        document.cookie = "userPic=";
+        location.reload();
+    }
 
-        function LoginButton() {
-            if (isSignIn) {
-                document.getElementById("isSignIn").innerText = "My Trashbox";
-                document.getElementById("avatar-FP").src = userPic;
-                {#document.getElementById("func-btn").innerHTML = '<button class="alx-btn" onclick="logout()">Wyloguj</button>';#}
-                let btn = document.createElement("BUTTON");
-                btn.className = "alx-btn";
-                btn.innerText = "Wyloguj";
-                btn.addEventListener("click", logout);
-                document.getElementById("func-btn").appendChild(btn);
-            } else {
-                document.getElementById("isSignIn").innerText = "Zaloguj się";
-                document.getElementById("avatar-FP").src = "/static/pic/raccoon.gif";
-            }
+    {#-------------------------------------------------
+    open/closeLoginForm otwierają i zamykają okno
+    z przyciskiem do logowania przez google
+    -------------------------------------------------#}
+    var glogin = document.getElementById("alx-gbtn");
+
+    function openLoginForm() {
+        if (isSignIn) {
+            alert("My Trashbox will be able soon!");
+        } else {
+            glogin.style.transition = "all 200ms";
+            glogin.style.opacity = "1";
+            glogin.style.zIndex = "10";
         }
+    }
 
-        function logout() {
-            document.cookie = "userID=";
-            document.cookie = "userPic=";
-            location.reload();
-        }
+    function closeLoginForm() {
+        glogin.style.opacity = "0";
+        glogin.style.zIndex = "-10";
+    }
 
-        {#-------------------------------------------------
-        open/closeLoginForm otwierają i zamykają okno
-        z przyciskiem do logowania przez google
-        -------------------------------------------------#}
-        var glogin = document.getElementById("alx-gbtn");
+    function loginData() {
+        document.cookie = "userID=" + autoID;
+        document.cookie = "userPic=" + autoPic;
+        location.reload();
+    }
 
-        function openLoginForm() {
-            if (isSignIn) {
-                alert("My Trashbox will be able soon!");
-            } else {
-                glogin.style.transition = "all 200ms";
-                glogin.style.opacity = "1";
-                glogin.style.zIndex = "10";
-            }
-        }
+</script>
+<script>
+    {#-------------------------------------------------
+    Skrypt odpowiedzialny zaz przycisk google,
+    zwracający dane do konsoli po poprawnym logowaniu
+    -------------------------------------------------#}
 
-        function closeLoginForm() {
-            glogin.style.opacity = "0";
-            glogin.style.zIndex = "-10";
-        }
+    function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
 
-        function loginData() {
-            document.cookie = "userID=" + autoID;
-            document.cookie = "userPic=" + autoPic;
-            location.reload();
-        }
-
-    </script>
-    <script>
-        {#-------------------------------------------------
-        Skrypt odpowiedzialny zaz przycisk google,
-        zwracający dane do konsoli po poprawnym logowaniu
-        -------------------------------------------------#}
-
-        function onSignIn(googleUser) {
-            // Useful data for your client-side scripts:
-            var profile = googleUser.getBasicProfile();
-            console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-            console.log('Full Name: ' + profile.getName());
-            console.log('Given Name: ' + profile.getGivenName());
-            console.log('Family Name: ' + profile.getFamilyName());
-            console.log("Image URL: " + profile.getImageUrl());
-            console.log("Email: " + profile.getEmail());
-
-            // The ID token you need to pass to your backend:
-            var id_token = googleUser.getAuthResponse().id_token;
-            console.log("ID Token: " + id_token);
-        };
-    </script>
-    </body>
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+    };
+</script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+</body>
 </html>
