--- a/static/style/first-page-style.css
+++ b/static/style/first-page-style.css
@@ -9,7 +9,39 @@ body {
     /*background: linear-gradient(20deg, #161F40 25%, #fff 25%);*/
     color: #161F40;
     font-size: 1rem;
+    /*fonts*/
+    font-family: 'Gugi', cursive;
+/*     font-family: 'Indie Flower', cursive; */
+/*     font-family: 'Shadows Into Light', cursive; */
+/*     font-family: 'East Sea Dokdo', cursive; */
+/*     font-family: 'Permanent Marker', cursive; */
+/*     font-family: 'Josefin Slab', serif; */
+/*     font-family: 'Kirang Haerang', cursive; */
+/*     font-family: 'Press Start 2P', cursive; */
+/*     font-family: 'VT323', monospace; */
+/*     font-family: 'Special Elite', cursive; */
+/*     font-family: 'Rock Salt', cursive; */
+/*     font-family: 'Cabin Sketch', cursive; */
+/*     font-family: 'Merienda', cursive; */
+/*     font-family: 'Libre Barcode 39', cursive; */
+/*     font-family: 'Black Ops One', cursive; */
+/*     font-family: 'Yatra One', cursive; */
+/*     font-family: 'Quantico', sans-serif; */
+/*     font-family: 'Love Ya Like A Sister', cursive; */
+/*     font-family: 'Fredericka the Great', cursive; */
+/*     font-family: 'Aladin', cursive; */
+/*     font-family: 'IM Fell English SC', serif; */
+/*     font-family: 'Faster One', cursive; */
+/*     font-family: 'Megrim', cursive; */
+/*     font-family: 'Libre Barcode 39 Extended Text', cursive; */
+/*     font-family: 'Creepster', cursive; */
+/*     font-family: 'Finger Paint', cursive; */
+/*     font-family: 'Trade Winds', cursive; */
+/*     font-family: 'Caesar Dressing', cursive; */
+/*     font-family: 'Londrina Sketch', cursive; */
+/*     font-family: 'Almendra Display', cursive; */
 }
+
 /*
 ----------------
 ---   Logo   ---
@@ -17,8 +49,9 @@ body {
 */
 
 h1 {
-    font-size: 3.2rem;
+    font-size: 3.5rem;
     color: black;
+    font-family: 'Cabin Sketch', cursive;
 }
 
 .alx-img-logo {
@@ -45,6 +78,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.5rem;
+    font-family: 'Cabin Sketch', cursive;
 }
 
 .alx-gbtn {
@@ -62,20 +97,30 @@ h1 {
 .alx-foo {
     width: 100%;
     height: 5%;
-    align-items:center;
-    justify-content:center;
+    align-items: center;
+    justify-content: center;
     display: flex;
     flex-direction: row;
     box-shadow: 0px -1px 5px #ccc;
 }
-
-.alx-foo-item{
-    text-align:center;
+.alx-foo-item {
+    text-align: center;
     width: 100px;
     padding: 0px 10px;
 }
+a{
+    text-decoration:none;
+    color: #161F40;
+    border-bottom: solid 0px #161F40;
+    transition: all 200ms;
+}
+a:hover{
+    position:relative;
+    padding: 5px;
+    border-bottom: solid 2px #161F40;
+}
 
-.alx-freeSpace{
+.alx-freeSpace {
     width: 100%;
     height: 8%;
 }
@@ -94,7 +139,7 @@ h1 {
     flex-direction: row;
 }
 
-.alx-flex-box:nth-child(2){
+.alx-flex-box:nth-child(2) {
     position: relative;
     justify-content: left;
     top: 60px;
@@ -103,7 +148,7 @@ h1 {
 }
 
 .alx-flex-box:first-child {
-    position:relative;
+    position: relative;
     top: 15vh;
     height: 0;
     z-index: -1;
@@ -112,7 +157,6 @@ h1 {
 .alx-flex-box:last-child {
     justify-content: center;
 }
-
 
 /*
 ----------------------------
@@ -154,13 +198,6 @@ button:hover {
     color: #161F40;
     background: #fff;
 }
-
-/*.alx-btn:nth-child(2){*/
-/*background: none;*/
-/*color: #161F40;*/
-/*border-radius: 0;*/
-/*margin: 5px;*/
-/*}*/
 
 .alx-btn {
     border: none;
