--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
           content="421574370091-aml7mds2j5ovgg2q0lbjfdbuttm5k4b7.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Aladin|Almendra+Display|Black+Ops+One|Cabin+Sketch:400,700|Caesar+Dressing|Creepster|East+Sea+Dokdo|Faster+One|Finger+Paint|Fredericka+the+Great|Gugi|IM+Fell+English+SC|Indie+Flower|Josefin+Slab:400,700|Kirang+Haerang|Libre+Barcode+39|Libre+Barcode+39+Extended+Text|Londrina+Sketch|Love+Ya+Like+A+Sister|Megrim|Merienda:400,700|Permanent+Marker|Press+Start+2P|Quantico:400,700|Rock+Salt|Shadows+Into+Light|Special+Elite|Trade+Winds|VT323|Yatra+One&amp;subset=latin-ext" rel="stylesheet">
     <link rel=stylesheet type=text/css href="/static/style/first-page-style.css">
     <title>{{ info[0] }}</title>
 </head>
@@ -43,9 +44,9 @@
 </div>
 <div class="alx-freeSpace"></div>
 <div class="alx-foo">
-    <div class="alx-foo-item">Info</div>
-    <div class="alx-foo-item">Kontakt</div>
-    <div class="alx-foo-item">O nas</div>
+    <div class="alx-foo-item"><a href="#">Kontakt</a></div>
+    <div class="alx-foo-item"><a href="#">LLAPADAY</a></div>
+    <div class="alx-foo-item"><a href="#">O nas</a></div>
 </div>
 
 <script>
