--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,21 @@
     <link rel=stylesheet type=text/css href="/static/style/first-page-style.css">
     <title>{{ info[0] }}</title>
 </head>
-<body>
+<body onload="loginButton()">
 <div id="alx-gbtn">
     <div class="alx-gbtn">
         <h2>Zaloguj sie przez Google!</h2>
         <div class="g-signin2" align="center" data-width="300" data-height="50" data-onsuccess="onSignIn"
              data-theme="dark"></div>
         <div>
-            <button class="alx-btn" onclick="loginData()">Login Test</button>
+            <button class="alx-btn" onclick="loginTest()">Login Test</button>
             <button class="alx-btn" onclick="closeLoginForm()">Zamknij</button>
         </div>
     </div>
+</div>
+<div id="userinfo">
+    <img id="userimg" src="">
+    <span id="username"></span>
 </div>
 <div class="alx-cont">
     <div class="alx-flex">
@@ -51,50 +55,39 @@
 </div>
 
 <script>
+
     function goTo(where) {
         window.location.replace(where);
     }
+
     {#-------------------------------------------------
     isSignIn odpowiada za to, czy przycisk logowania
     przekieruje do logowania google (jeśli false),
     czy na chmurę (jeśli true)
     -------------------------------------------------#}
     var isSignIn = false;
-    {#var autoID = 23487623874623764;#}
-    {#var autoPic = "/static/pic/testpic.jpg";#}
-    var userPic;
+    var userID = 1234567890;
+    var userPic = "https://lh5.googleusercontent.com/-p-7kqdTngmk/AAAAAAAAAAI/AAAAAAAAAkA/LS9olK6iiME/s96-c/photo.jpg";
+    var userName = "Aleks";
 
-    var autoID = {{ data[0] }};
-
-    {#-------------------------------------------------
-    Pobranie ciasteczek i sprawdzenie czy istnie userID
-    -------------------------------------------------#}
-
-    {#    var userID = getCookie("userID");#}
-    {#    if(userID == ""){alert("Brak userID");}else{alert(userID);}#}
-
-    function getCookie(name) {
-        var cookies = document.cookie;
-        var tmp = cookies.split(";");
-        for (var i = 0; i < tmp.length; i++) {
-            var cookbook = tmp[i].split("=");
-            if (cookbook[0] == name) return cookbook[1];
-        }
-        return "";
+    function afterlogin() {
+        document.getElementById("userinfo").style.opacity = "1";
+        document.getElementById("userimg").src = userPic;
+        document.getElementById("username").innerHTML = userName;
     }
 
-    var userID = getCookie("userID");
-    var userPic = getCookie(" userPic");
-    if (userID == autoID) isSignIn = true;
+    function loginTest() {
+        afterlogin();
+        isSignIn = true;
+        loginButton();
+        closeLoginForm();
+    }
 
     {#-------------------------------------------------
     Edycja przycisku logowania i wylogowania
     -------------------------------------------------#}
-    LoginButton();
 
-    LoginButton();
-
-    function LoginButton() {
+    function loginButton() {
         if (isSignIn) {
             document.getElementById("isSignIn").innerText = "My Trashbox";
             let btn = document.createElement("BUTTON");
@@ -108,9 +101,8 @@
     }
 
     function logout() {
-        document.cookie = "userID=";
-        isSignIn = false;
         signOut();
+        isSignIn = false;
         location.reload();
     }
 
@@ -131,12 +123,6 @@
         glogin.style.zIndex = "-10";
     }
 
-    function loginData() {
-        document.cookie = "userID=" + autoID;
-        location.reload();
-    }
-</script>
-<script>
     {#-------------------------------------------------
     Ciało funkcji wykonuje się po zalogowaniu na konto
     google
@@ -157,6 +143,9 @@
         console.log("ID Token: " + id_token);
 
         // Wywołanie zmian po zalogowaniu
+        userID = profile.getId();
+        userPic = profile.getImageUrl();
+        userName = profile.getGivenName();
         isSignIn = true;
         closeLoginForm();
         LoginButton();
@@ -165,9 +154,11 @@
     function signOut() {
         var auth2 = gapi.auth2.getAuthInstance();
         auth2.signOut().then(function () {
+            auth2.disconnect();
             console.log('User signed out.');
         });
     }
+
 </script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </body>
