--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,43 @@
     var userPic = "https://lh5.googleusercontent.com/-p-7kqdTngmk/AAAAAAAAAAI/AAAAAAAAAkA/LS9olK6iiME/s96-c/photo.jpg";
     var userName = "Aleks";
 
+    {#-------------------------------------------------
+    Ciało funkcji wykonuje się po zalogowaniu na konto
+    google
+    -------------------------------------------------#}
+
+    function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+
+        // Wywołanie zmian po zalogowaniu
+        userID = profile.getId();
+        userPic = profile.getImageUrl();
+        userName = profile.getGivenName();
+        isSignIn = true;
+        closeLoginForm();
+        afterlogin();
+        loginButton();
+    };
+
+    function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+            auth2.disconnect();
+            console.log('User signed out.');
+        });
+    }
+
     function afterlogin() {
         document.getElementById("userinfo").style.opacity = "1";
         document.getElementById("userimg").src = userPic;
@@ -123,41 +160,7 @@
         glogin.style.zIndex = "-10";
     }
 
-    {#-------------------------------------------------
-    Ciało funkcji wykonuje się po zalogowaniu na konto
-    google
-    -------------------------------------------------#}
 
-    function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
-        console.log("ID Token: " + id_token);
-
-        // Wywołanie zmian po zalogowaniu
-        userID = profile.getId();
-        userPic = profile.getImageUrl();
-        userName = profile.getGivenName();
-        isSignIn = true;
-        closeLoginForm();
-        LoginButton();
-    };
-
-    function signOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        auth2.signOut().then(function () {
-            auth2.disconnect();
-            console.log('User signed out.');
-        });
-    }
 
 </script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
