First Page, poprawione bugi i usunięte venv

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Aladin|Almendra+Display|Black+Ops+One|Cabin+Sketch:400,700|Caesar+Dressing|Creepster|East+Sea+Dokdo|Faster+One|Finger+Paint|Fredericka+the+Great|Gugi|IM+Fell+English+SC|Indie+Flower|Josefin+Slab:400,700|Kirang+Haerang|Libre+Barcode+39|Libre+Barcode+39+Extended+Text|Londrina+Sketch|Love+Ya+Like+A+Sister|Megrim|Merienda:400,700|Permanent+Marker|Press+Start+2P|Quantico:400,700|Rock+Salt|Shadows+Into+Light|Special+Elite|Trade+Winds|VT323|Yatra+One&amp;subset=latin-ext"
           rel="stylesheet">
     <link rel=stylesheet type=text/css href="static/style/about-page-style.css">
-    <title>Trashpanda Info</title>
+    <title>Trashpanda - O nas</title>
 </head>
 <body>
 <div class="alx-cont">
