--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,9 @@
 </div>
 <div class="alx-cont">
     <div class="alx-flex">
-        <div class="alx-flex-box">
-            <h1>Trashpanda</h1>
-        </div>
-        <div class="alx-flex-box">
-            <img src="/static/pic/logo.png">
+        <div class="alx-flex-box margin">
+                <h1>Trashpanda</h1>
+                <img src="/static/pic/logo2.svg" class="alx-img-logo">
         </div>
         <div class="alx-flex-box">
             <form>
