Zmiana logo v2 xd?

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <div class="alx-flex">
         <div class="alx-flex-box margin">
                 <h1>Trashpanda</h1>
-                <img src="/static/pic/logo2.svg" class="alx-img-logo">
+                <img src="/static/pic/raccoon.svg" class="alx-img-logo">
         </div>
         <div class="alx-flex-box">
             <form>
