--- a/templates/404.html
+++ b/templates/404.html
@@ -15,6 +15,6 @@
             <h3>Nie znaleziono strony!</h3>
     </div>
 </div>
-{% include 'footer.html' %}
+{% include 'Footer.html' %}
 </body>
 </html>
