--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     </div>
 </div>
 <div class="alx-freeSpace"></div>
-{% include  'footer.html' %}
+{% include  'Footer.html' %}
 <script src="/static/scripts/index.js"></script>
 </body>
 </html>
