--- a/templates/about.html
+++ b/templates/about.html
@@ -28,6 +28,7 @@
         <br>Marcin Ochociński
     </div>
 </div>
-{% include 'footer.html' %}
+{% include 'Footer.html' %}
+{% include 'UserPanel.html' %}
 </body>
 </html>
