--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -30,6 +30,7 @@
         </form>
     </div>
 </div>
-{% include 'footer.html' %}
+{% include 'Footer.html' %}
+{% include 'UserPanel.html' %}
 </body>
 </html>
