--- a/templates/UserPanel.html
+++ b/templates/UserPanel.html
@@ -6,7 +6,6 @@
 
     <img id="userimg" src="">
     <span id="username"></span>
-    <div class="g-signin2" align="center" data-width="300" data-height="50" data-onsuccess="onSignIn"
-             data-theme="dark"></div>
+    <div class="g-signin2" style="display: none;" data-onsuccess="onSignIn"></div>
 </div>
 <script src="/static/scripts/UserPanel.js"></script>
