--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,7 @@
         <div class="g-signin2" align="center" data-width="300" data-height="50" data-onsuccess="onSignIn"
              data-theme="dark"></div>
         <div>
-            <button class="alx-btn" onclick="loginTest()">Login Test</button>
-            <button class="alx-btn" onclick="closeLoginForm()">Zamknij</button>
+            <button class="alx-btn" style="border-radius: 10px;" onclick="closeLoginForm()">Zamknij</button>
         </div>
     </div>
 </div>
