--- a/templates/UserPanel.html
+++ b/templates/UserPanel.html
@@ -1,6 +1,11 @@
+<meta name="google-signin-client_id" content="557305630089-3sr6loe91a193q6t9e2du5np98rt0khf.apps.googleusercontent.com">
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel=stylesheet type=text/css href="static/style/UserPanel.css"/>
 <div id="userinfo">
+
     <img id="userimg" src="">
     <span id="username"></span>
+    <div class="g-signin2" style="display: none;" data-onsuccess="onSignIn"></div>
 </div>
 <script src="/static/scripts/UserPanel.js"></script>
