Update tree file

--- a/templates/UserPanel.html
+++ b/templates/UserPanel.html
@@ -6,6 +6,7 @@
 
     <img id="userimg" src="">
     <span id="username"></span>
+    <span onclick="signOut()">Wyloguj</span>
     <div class="g-signin2" style="display: none;" data-onsuccess="onSignIn"></div>
 </div>
 <script src="/static/scripts/UserPanel.js"></script>
