--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
              data-theme="dark"></div>
         <div>
 {#            <button class="alx-btn" onclick="loginTest()">Login Test</button>#}
-            <button class="alx-btn" onclick="closeLoginForm()">Zamknij</button>
+            <button class="alx-btn" style="border-radius: 10px" onclick="closeLoginForm()">Zamknij</button>
         </div>
     </div>
 </div>
