--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -1,20 +1,4 @@
-<style>
-.alx-foo {
-    width: 100%;
-    height: 5%;
-    min-height: 30px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: row;
-    box-shadow: 0px -1px 5px #ccc;
-}
-.alx-foo-item {
-    text-align: center;
-    width: 110px;
-    padding: 0px 10px;
-}
-</style>
+<link rel=stylesheet type=text/css href="static/style/Footer.css"/>
 <div class="alx-foo">
     <div class="alx-foo-item"><a href="/">Home</a></div>
     <div class="alx-foo-item"><a href="kontakt">Kontakt</a></div>
