--- a/static/style/UserPanel.css
+++ b/static/style/UserPanel.css
@@ -18,3 +18,9 @@
     top: calc(-25px + 0.5rem);
     left: 10px;
 }
+
+#userlogout{
+    position: relative;
+    top: calc(-25px + 0.5rem);
+    left: 10px;
+}
