--- a/static/style/error-page-style.css
+++ b/static/style/error-page-style.css
@@ -1,17 +1,4 @@
-    html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    /*background: linear-gradient(20deg, #161F40 25%, #fff 25%);*/
-    color: #161F40;
-    font-size: 1rem;
-    /*fonts*/
-    font-family: 'Gugi', cursive;
-}
+@import "extend/base.css";
 
 hr{
     width: 70%;
@@ -40,17 +27,4 @@ h1 {
 .alx-flex-box{
 	width: 100%;
     text-align: center;
-}
-
-a{
-    text-decoration:none;
-    color: #161F40;
-    border-bottom: solid 0px #161F40;
-    transition: all 200ms;
-}
-
-a:hover{
-    position:relative;
-    padding: 5px;
-    border-bottom: solid 2px #161F40;
 }
