--- a/templates/info_pages/kontakt.html
+++ b/templates/info_pages/kontakt.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Aladin|Almendra+Display|Black+Ops+One|Cabin+Sketch:400,700|Caesar+Dressing|Creepster|East+Sea+Dokdo|Faster+One|Finger+Paint|Fredericka+the+Great|Gugi|IM+Fell+English+SC|Indie+Flower|Josefin+Slab:400,700|Kirang+Haerang|Libre+Barcode+39|Libre+Barcode+39+Extended+Text|Londrina+Sketch|Love+Ya+Like+A+Sister|Megrim|Merienda:400,700|Permanent+Marker|Press+Start+2P|Quantico:400,700|Rock+Salt|Shadows+Into+Light|Special+Elite|Trade+Winds|VT323|Yatra+One&amp;subset=latin-ext"
-          rel="stylesheet">
+    {% include 'extend/head.html' %}
     <link rel=stylesheet type=text/css href="static/style/kontakt-page-style.css">
     <title>Trashpanda - Kontakt</title>
 </head>
@@ -30,7 +28,7 @@
         </form>
     </div>
 </div>
-{% include 'Footer.html' %}
-{% include 'UserPanel.html' %}
+{% include 'extend/Footer.html' %}
+{% include 'extend/UserPanel.html' %}
 </body>
 </html>
