--- a/static/style/extend/base.css
+++ b/static/style/extend/base.css
@@ -1,16 +1,15 @@
 html, body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
 body {
+    opacity: 0;
     color: #161F40;
     font-size: 1rem;
-    opacity: 0;
-    transition: all 500ms;
     font-family: 'Gugi', cursive;
     /*Fonts*/
     /*     font-family: 'Indie Flower', cursive; */
@@ -53,6 +52,7 @@ a {
 }
 
 a:hover {
+    cursor: pointer;
     position: relative;
     padding: 5px;
     border-bottom: solid 2px #161F40;
