--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     {% include 'extend/head.html' %}
     <title>Trashpanda - Home</title>
-    <link rel=stylesheet type=text/css href="/static/style/index-page-style.css">
+    <link rel=stylesheet type=text/css href="/static/style/index.css">
 </head>
 <body>
 <div id="alx-gbtn">
@@ -41,7 +41,7 @@
     </div>
 </div>
 <div class="alx-freeSpace"></div>
-{% include 'extend/Footer.html' %}
+{% include 'extend/footer.html' %}
 <script src="/static/scripts/js/index.js"></script>
 </body>
 </html>
