--- a/templates/info_pages/404.html
+++ b/templates/info_pages/404.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="static/style/error-page-style.css">
+    <link rel=stylesheet type=text/css href="/static/style/info_pages/error.css">
     <title>Trashpanda - Error 404</title>
 </head>
 <body>
@@ -13,6 +13,6 @@
             <h3>Nie znaleziono strony!</h3>
     </div>
 </div>
-{% include 'extend/Footer.html' %}
+{% include 'extend/footer.html' %}
 </body>
 </html>
