--- a/templates/info_pages/about.html
+++ b/templates/info_pages/about.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="/static/style/about-page-style.css">
+    <link rel=stylesheet type=text/css href="/static/style/info_pages/about.css">
     <title>Trashpanda - O nas</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
         <br>Marcin Ochociński
     </div>
 </div>
-{% include 'extend/Footer.html' %}
-{% include 'extend/UserPanel.html' %}
+{% include 'extend/footer.html' %}
+{% include 'extend/user_panel.html' %}
 </body>
 </html>
