--- a/templates/info_pages/contact.html
+++ b/templates/info_pages/contact.html
@@ -2,13 +2,13 @@
 <html lang="pl">
 <head>
     {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="static/style/kontakt-page-style.css">
+    <link rel=stylesheet type=text/css href="/static/style/info_pages/contact.css">
     <title>Trashpanda - Kontakt</title>
 </head>
 <body>
 <div class="alx-cont">
     <div class="alx-flex-box">
-        <img src="static/pic/logo.png">
+        <img src="/static/pic/logo.png">
     </div>
     <div class="alx-flex-box">
         <h1>Kontakt</h1>
@@ -28,7 +28,7 @@
         </form>
     </div>
 </div>
-{% include 'extend/Footer.html' %}
-{% include 'extend/UserPanel.html' %}
+{% include 'extend/footer.html' %}
+{% include 'extend/user_panel.html' %}
 </body>
 </html>
