--- a/templates/info_pages/info.html
+++ b/templates/info_pages/info.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     {% include 'extend/head.html' %}
-    <link rel=stylesheet type=text/css href="static/style/info-page-style.css">
+    <link rel=stylesheet type=text/css href="/static/style/info_pages/info.css">
     <title>Trashpanda - Info</title>
 </head>
 <body>
@@ -41,7 +41,7 @@
 </div>
 <br/>
 <br/>
-{% include 'extend/Footer.html' %}
-{% include 'extend/UserPanel.html' %}
+{% include 'extend/footer.html' %}
+{% include 'extend/user_panel.html' %}
 </body>
 </html>
