--- a/static/style/trashbox-base.css
+++ b/static/style/trashbox-base.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #fff;
 }
 .foo{
     bottom: -45px;
