--- a/templates/extend/footer.html
+++ b/templates/extend/footer.html
@@ -1,7 +1,7 @@
-<link rel=stylesheet type=text/css href="/static/style/extend/Footer.css"/>
+<link rel=stylesheet type=text/css href="/static/style/extend/footer.css"/>
 <div class="alx-foo">
     <div class="alx-foo-item"><a onclick="goTo('/')">Home</a></div>
-    <div class="alx-foo-item"><a onclick="goTo('/kontakt')">Kontakt</a></div>
+    <div class="alx-foo-item"><a onclick="goTo('/contact')">Kontakt</a></div>
     <div class="alx-foo-item"><a onclick="goTo('/mytrashbox')">TRASHBOX</a></div>
     <div class="alx-foo-item"><a onclick="goTo('/about')">O nas</a></div>
     <div class="alx-foo-item"><a onclick="goTo('/info')">Info</a></div>
